# ai-prod-mgr

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  EXECUTION_LOG.md  README.md  VERIFICATION_INDEX.md  agent.py  gmail_daily_summary.py  requirements.txt
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
modules/market-intelligence-monitor/: .gitignore  README.md  pyproject.toml  tmp_fidelity_extract.txt
modules/market-intelligence-monitor/config/: sources.yaml
modules/market-intelligence-monitor/data/briefs/: LATEST_BRIEF.md
modules/market-intelligence-monitor/data/signals/guardrails/: guardrails_report__finra__20251226T150831Z.json
modules/market-intelligence-monitor/data/signals/hydrated/: hydrated_signals__finra_newsreleases__20251225T163427Z.json  hydrated_signals__finra_newsreleases__20251225T165251Z.json  hydrated_signals__finra_newsreleases__20251225T170542Z.json  hydrated_signals__finra_newsreleases__20251225T181810Z.json
modules/market-intelligence-monitor/data/signals/raw/: signals__fidelity_press__20251224T174531Z.json  signals__fidelity_press__20251224T174627Z.json  signals__finra_newsreleases__20251225T155830Z.json  signals__finra_newsreleases__20251225T160321Z.json
modules/market-intelligence-monitor/data/signals/retrieval/: retrieval_set__finra__20251225T183152Z.json
modules/market-intelligence-monitor/docs/diagrams/: README.md  context-diagram.drawio  context-diagram.mmd
modules/market-intelligence-monitor/src/market_intel/: __init__.py  models.py  runner.py
modules/market-intelligence-monitor/tests/: test_smoke.py
(+200 files in other folders)
